tests/golden/err-bad-load/expected.err
evaluating SRC `//`: error: load path `lib/x.scl` must be `//`-anchored from the monorepo root
 --> //:1:1
  |
1 | load("lib/x.scl", "y")
  | ^^^^^^^^^^^^^^^^^^^^^^
  |

